# bsv-lsp-workspace

./: README.md
client/: package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
server/: Cargo.toml
server/src/: main.rs
